--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <title>Responsive Football</title>
+
     <!-- linking CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="queries.css">
@@ -25,12 +26,13 @@
 
 <body>
     <header>
+        <!-- Header structure -->
         <div class="header_main">
             <div class="left_header">
                 <h1 class="header_title">
                     Conmebol Copa America 2021
                 </h1>
-                <a target="blank" href="#" class="watch_live">Watch Live <i class="fas fa-arrow-right"></i></a>
+                <a target="blank" href="https://www.facebook.com/protyoy.ghoshii/" class="watch_live">Watch Live <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="right_header">
                 <img src="images/banner.png" alt="">
@@ -40,14 +42,15 @@
 
     <main>
         <section class="top_players">
+            <!-- individual player structure  -->
             <div class="players">
                 <div class="player">
                     <div class="player_profile">
                         <img src="images/player-1.png" alt="">
+                        <!-- player description structure  -->
                         <div class="player_disc">
                             <h3 class="player_name">Neymar jr</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">This is Neymar jr from Brazil.He is one of the most finest dribller right now in world football.
                             </p>
                         </div>
                     </div>
@@ -57,8 +60,7 @@
                         <img src="images/player-2.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Lionel Messi</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">This LM10 from Argentina.People call him the GOAT.The Greatest of All Time.
                             </p>
                         </div>
                     </div>
@@ -68,8 +70,7 @@
                         <img src="images/player-3.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Cristiano Ronaldo</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Ronaldo known for his Goal scoring ability.He is the fittest player in the world.
                             </p>
                         </div>
                     </div>
@@ -79,8 +80,7 @@
                         <img src="images/player-4.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Paulo Dybala</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Dybala is very good attacking option for a team.He played with both Messi and CR7.
                             </p>
                         </div>
                     </div>
@@ -90,8 +90,7 @@
                         <img src="images/player-5.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Mesut Ozil</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Ozil had one of the most deadliest left foot when he played for Real.Assist King
                             </p>
                         </div>
                     </div>
@@ -101,8 +100,7 @@
                         <img src="images/player-6.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Mauro Icardi</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Icardi is very underrated striker right now.recently he moved to PSG from Inter.
                             </p>
                         </div>
                     </div>
@@ -112,8 +110,7 @@
                         <img src="images/player-7.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Di Maria</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">De Maria is very unpredictable player.He scores the Copa America final goal.
                             </p>
                         </div>
                     </div>
@@ -123,8 +120,7 @@
                         <img src="images/player-8.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Kylian Mbappe</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Mbappe is of the finest young player in the world right now.He known for is rocket speed..
                             </p>
                         </div>
                     </div>
@@ -134,17 +130,18 @@
                         <img src="images/player-9.png" alt="">
                         <div class="player_disc">
                             <h3 class="player_name">Mohamed Salah</h3>
-                            <p class="player_info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque,
-                                perspiciatis.
+                            <p class="player_info">Right now Salah has one of the best left foot after Lio Messi.Artist with the ball.
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        
+        <!-- Bonus area structure  -->
         <div class="container">
             <div class="container_left">
+                 <!-- Feedback form structure  -->
                 <form>
                     <h1>Give your Feedback</h1>
                     <div class="id">
@@ -161,6 +158,7 @@
             </div>
 
             <div class="container_right">
+                <!-- Our calender structure  -->
                 <div class="calender_detail">
                     <h1>Our Calender</h1>
                     <div class="calendar">
@@ -213,15 +211,19 @@
         </div>
     </main>
 
+    <!-- footer area structure  -->
     <footer>
         <div class="footer">
+            <!-- logo -->
             <div class="logo"><img src="images/Logo.png" alt=""></div>
+            <!-- social icons  -->
             <div class="icons">
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-youtube"></i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-twitter"></i>
             </div>
+            <!-- copyright area  -->
             <div class="copyright">
                 <p class="copyright_detail">copyright <i class="far fa-copyright"></i> 2020 football</p>
             </div>
